pkg/service/ec2/testdata/describenetworkacls-expect.json
[
    {
      "action": "",
      "id": "acl-050000000000000b9",
      "data": {
        "Associations": [
          {
            "NetworkAclAssociationId": "aclassoc-0b0000000000000e2",
            "NetworkAclId": "acl-050000000000000b9",
            "SubnetId": "subnet-09000000000000040"
          }
        ],
        "Entries": [
          {
            "CidrBlock": "0.0.0.0/0",
            "Egress": true,
            "IcmpTypeCode": null,
            "Ipv6CidrBlock": null,
            "PortRange": null,
            "Protocol": "-1",
            "RuleAction": "allow",
            "RuleNumber": 100
          },
          {
            "CidrBlock": "0.0.0.0/0",
            "Egress": true,
            "IcmpTypeCode": null,
            "Ipv6CidrBlock": null,
            "PortRange": null,
            "Protocol": "-1",
            "RuleAction": "deny",
            "RuleNumber": 32767
          },
          {
            "CidrBlock": "0.0.0.0/0",
            "Egress": false,
            "IcmpTypeCode": null,
            "Ipv6CidrBlock": null,
            "PortRange": null,
            "Protocol": "-1",
            "RuleAction": "allow",
            "RuleNumber": 100
          },
          {
            "CidrBlock": "0.0.0.0/0",
            "Egress": false,
            "IcmpTypeCode": null,
            "Ipv6CidrBlock": null,
            "PortRange": null,
            "Protocol": "-1",
            "RuleAction": "deny",
            "RuleNumber": 32767
          }
        ],
        "IsDefault": true,
        "NetworkAclId": "acl-050000000000000b9",
        "OwnerId": "1234567890",
        "Tags": [],
        "VpcId": "vpc-070000000000000cf"
      }
    },
    {
      "action": "",
      "id": "acl-0d000000000000027",
      "data": {
        "Associations": [
          {
            "NetworkAclAssociationId": "aclassoc-0d000000000000031",
            "NetworkAclId": "acl-0d000000000000027",
            "SubnetId": "subnet-08000000000000058"
          },
          {
            "NetworkAclAssociationId": "aclassoc-070000000000000a7",
            "NetworkAclId": "acl-0d000000000000027",
            "SubnetId": "subnet-0300000000000008f"
          },
          {
            "NetworkAclAssociationId": "aclassoc-03000000000000049",
            "NetworkAclId": "acl-0d000000000000027",
            "SubnetId": "subnet-0f0000000000000f6"
          },
          {
            "NetworkAclAssociationId": "aclassoc-0b000000000000012",
            "NetworkAclId": "acl-0d000000000000027",
            "SubnetId": "subnet-08000000000000001"
          }
        ],
        "Entries": [
          {
            "CidrBlock": "0.0.0.0/0",
            "Egress": true,
            "IcmpTypeCode": null,
            "Ipv6CidrBlock": null,
            "PortRange": null,
            "Protocol": "-1",
            "RuleAction": "allow",
            "RuleNumber": 100
          },
          {
            "CidrBlock": "0.0.0.0/0",
            "Egress": true,
            "IcmpTypeCode": null,
            "Ipv6CidrBlock": null,
            "PortRange": null,
            "Protocol": "-1",
            "RuleAction": "deny",
            "RuleNumber": 32767
          },
          {
            "CidrBlock": "0.0.0.0/0",
            "Egress": false,
            "IcmpTypeCode": null,
            "Ipv6CidrBlock": null,
            "PortRange": null,
            "Protocol": "-1",
            "RuleAction": "allow",
            "RuleNumber": 100
          },
          {
            "CidrBlock": "0.0.0.0/0",
            "Egress": false,
            "IcmpTypeCode": null,
            "Ipv6CidrBlock": null,
            "PortRange": null,
            "Protocol": "-1",
            "RuleAction": "deny",
            "RuleNumber": 32767
          }
        ],
        "IsDefault": true,
        "NetworkAclId": "acl-0d000000000000027",
        "OwnerId": "1234567890",
        "Tags": [],
        "VpcId": "vpc-070000000000000c5"
      }
    }
  ]
